--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -12,8 +12,8 @@
     margin-left: 2rem;
     min-width: 40rem;
     background-image: url('./chatBackground.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .user2Name{
     padding: 0 1.5rem;
@@ -100,6 +100,8 @@
         height: 100vh;
         width: 100vw;
         margin-left: 0;
+	min-width: 100vw;
+        max-width: 100vw
     }
     .user2Name{
         justify-content: space-between;
